# xpwn

./: CMakeLists.txt  README.markdown
dmg/: CMakeLists.txt
dripwn/: dripwn.c
fwstitcher/: fwstitcher.c
hfs/: CMakeLists.txt
idevice/: idevice.c
includes/dmg/: dmg.h
includes/xpwn/: plist.h
ipsw/: CMakeLists.txt  cmake_install.cmake  pwnutil.c
ipsw-patch/: plist.c
plist/: CMakeLists.txt
resources/: CMakeLists.txt
tools/: CMakeLists.txt  ipswtool.c
xpwn/src/: xpwn.cpp
